Add code for counting blocked links for SM and FF